Don't set geometry in ui setup

--- a/src/views/ClockView.ui
+++ b/src/views/ClockView.ui
@@ -2,14 +2,6 @@
 <ui version="4.0">
  <class>ClockView</class>
  <widget class="QWidget" name="ClockView">
-  <property name="geometry">
-   <rect>
-    <x>0</x>
-    <y>0</y>
-    <width>320</width>
-    <height>46</height>
-   </rect>
-  </property>
   <layout class="QHBoxLayout" name="horizontalLayout">
    <item>
     <widget class="QPushButton" name="startStopButton">
@@ -17,7 +9,7 @@
       <string>Start</string>
      </property>
      <property name="icon">
-      <iconset resource="../icons.qrc">
+      <iconset>
        <normaloff>:/icons/start.png</normaloff>:/icons/start.png</iconset>
      </property>
      <property name="shortcut">
@@ -47,7 +39,7 @@
       <string>Single Step</string>
      </property>
      <property name="icon">
-      <iconset resource="../icons.qrc">
+      <iconset>
        <normaloff>:/icons/step.png</normaloff>:/icons/step.png</iconset>
      </property>
      <property name="shortcut">
@@ -75,9 +67,6 @@
    <container>1</container>
   </customwidget>
  </customwidgets>
- <resources>
-  <include location="../icons.qrc"/>
-  <include location="../icons.qrc"/>
- </resources>
+ <resources/>
  <connections/>
 </ui>
