--- a/src/views/SourcesView.ui
+++ b/src/views/SourcesView.ui
@@ -6,7 +6,7 @@
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
-      <widget class="QPushButton" name="startStopButton">
+      <widget class="StartStopButton" name="startStopButton">
        <property name="text">
         <string>Start</string>
        </property>
@@ -56,6 +56,11 @@
    <class>ce::CodeEditor</class>
    <extends>QPlainTextEdit</extends>
    <header>codeeditor/CodeEditor.h</header>
+  </customwidget>
+  <customwidget>
+   <class>StartStopButton</class>
+   <extends>QPushButton</extends>
+   <header>views/StartStopButton.h</header>
   </customwidget>
  </customwidgets>
  <resources>
