--- a/src/views/SourcesView.ui
+++ b/src/views/SourcesView.ui
@@ -44,6 +44,9 @@
    </item>
    <item>
     <widget class="ce::CodeEditor" name="codeView">
+     <property name="lineWrapMode">
+      <enum>QPlainTextEdit::NoWrap</enum>
+     </property>
      <property name="readOnly">
       <bool>true</bool>
      </property>
