--- a/src/AboutDialog.ui
+++ b/src/AboutDialog.ui
@@ -111,7 +111,7 @@
        <item>
         <widget class="QLabel" name="label_6">
          <property name="text">
-          <string>&lt;a href=&quot;https://github.com/DerSauron/6502emu&quot;&gt;https://github.com/DerSauron/6502emu&lt;/a&gt;</string>
+          <string>&lt;a href=&quot;https://github.com/volkarts-dev/6502emu&quot;&gt;https://github.com/volkarts-dev/6502emu&lt;/a&gt;</string>
          </property>
          <property name="openExternalLinks">
           <bool>true</bool>
@@ -152,7 +152,6 @@
   </layout>
  </widget>
  <resources>
-  <include location="icons.qrc"/>
   <include location="icons.qrc"/>
  </resources>
  <connections/>
