Don't translate some CPU components

--- a/src/views/BusView.ui
+++ b/src/views/BusView.ui
@@ -15,7 +15,7 @@
       </font>
      </property>
      <property name="text">
-      <string>0x00</string>
+      <string notr="true">0x00</string>
      </property>
      <property name="textFormat">
       <enum>Qt::PlainText</enum>
