--- a/src/views/VIAView.ui
+++ b/src/views/VIAView.ui
@@ -35,7 +35,7 @@
         </font>
        </property>
        <property name="text">
-        <string>CS</string>
+        <string notr="true">CS</string>
        </property>
       </widget>
      </item>
@@ -56,7 +56,7 @@
      <item>
       <widget class="QGroupBox" name="groupBox">
        <property name="title">
-        <string>PA</string>
+        <string notr="true">PA</string>
        </property>
        <layout class="QHBoxLayout" name="horizontalLayout_2">
         <item>
@@ -75,7 +75,7 @@
      <item>
       <widget class="QGroupBox" name="groupBox_2">
        <property name="title">
-        <string>PB</string>
+        <string notr="true">PB</string>
        </property>
        <layout class="QHBoxLayout" name="horizontalLayout_3">
         <item>
@@ -112,7 +112,7 @@
              </font>
             </property>
             <property name="text">
-             <string>T1: 0000</string>
+             <string notr="true">T1: 0000</string>
             </property>
            </widget>
           </item>
@@ -124,7 +124,7 @@
              </font>
             </property>
             <property name="text">
-             <string>L: 0000</string>
+             <string notr="true">L: 0000</string>
             </property>
            </widget>
           </item>
@@ -141,7 +141,7 @@
              </font>
             </property>
             <property name="text">
-             <string>T2: 0000</string>
+             <string notr="true">T2: 0000</string>
             </property>
            </widget>
           </item>
@@ -153,7 +153,7 @@
              </font>
             </property>
             <property name="text">
-             <string>L:   00</string>
+             <string notr="true">L:   00</string>
             </property>
            </widget>
           </item>
